# pytest-maxcov

./: README.md  pyproject.toml
dut/package/: add.py
dut/tests/: test-props.py
src/: plugin.py
src/pytest_maxcov/: __init__.py  plugin.py
test_env/: pytest.ini
test_env/package/: __init__.py  add.py  mul.py  sub.py
test_env/tests/: test_ops.py
tests/: conftest.py  test-commands.py  test-random.py  test_commands.py  test_maxcov.py
